--- a/site.html
+++ b/site.html
@@ -1,30 +1,64 @@
-<title> Bioagrafia - João da Silva </title>
-<meta charset="utf-8">
-<link rel="icon" href= "favicon.png">
-<h1> Sobre mim </h1>
+<!DOCTYPE html>
+<html>
+<head>
+		<meta charset="utf-8">
+		<title> Bioagrafia - João da Silva </title>
+		<link rel="icon" href= "favicon.png">
+		<link rel ="stylesheet" href="C:\Users\matheus.longo.GOCARE\Desktop\ESTUDO\html_css_joao\projeto-completo\css"
+		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Crismon+Text:400,400italic,600">
+		<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700">
 
-<p> Moro em São Paulo mas atendo clientes do mundo todo. Sou conhecido por fazer produtos de qualidade, durabilidade e que agregam valor para meus clientes. </P>
-<p> Trabalho usando a web como plataforma, ou seja, respiro HTML5, CSS3 e JavaScript (ou melhor: ECMASCript). Crio sites para todos, seguindo as principais diretivas de acessibilidade, responsividade e web semântica, sem descuidar da qualidade de código. </p>
+		<style>
+				h1 {
+					font-size: 60px ;
+					beckground-color: rgb (100, 150, 200);
+				}
+				h2 {
+					font-size: 40px ;
+				}
+				h3 {
+					font-size: 40px ;
+				}
+		</style>
 
 
-<h2> Como trabalho </h2>
+		<h1> Sobre mim </h1>
+</head>
+<body>
 
 
-<p>	João é o melhor desenvolvedor front-end com quem já trabalhei. Muito eficiente e muito capaz. Recomendo sem dúvidas!
-	-- José Souza, Fiat
 
-Satisfazer meus clientes é prioridade. Para isso, garanto um processo de desenvolvimento altamente interativo, baseado em feedback contínuo. Não trabalho com escopo fechado: o cliente é que decide quando o produto está pronto.
+				<p> Moro em São Paulo mas atendo clientes do mundo todo. Sou conhecido por fazer produtos de qualidade, durabilidade e que agregam valor para meus clientes. </P>
+				<p> Trabalho usando a web como plataforma, ou seja, respiro HTML5, CSS3 e JavaScript (ou melhor: ECMASCript). Crio sites para todos, seguindo as principais diretivas de acessibilidade, responsividade e web semântica, sem descuidar da qualidade de código. </p>
 
-Também não trabalho com prazos fechados: qualidade é importante demais para ser sacrificada. </p>
+ 	<h2> Como trabalho </h2>
 
-<h3>Experiência</h3>
 
-	<p>João domina as tecnologias como ninguém. Eu apresentava um problema, ele tinha na ponta da língua a solução mais adequada com as tecnologias mais recentes.
-	-- Manoel Santos, Petrobrás
+				<p>	João é o melhor desenvolvedor front-end com quem já trabalhei. Muito eficiente e muito capaz. Recomendo sem dúvidas!
+					-- José Souza, Fiat
 
-Já desenvolvi projetos para grandes empresas como BMW, UOL e IBM. Neles, o foco principal era entregar uma experiência imersiva e impactante para o usuário final sem descuidar do desempenho e da acessibilidade da página.
-Também já fui contratado para transformar grandes portais, como Terra e G1, em páginas responsivas. Fui responsável por renovar o layout, reorganizar o conteúdo e re-escrever o código de forma mais reaproveitável. </p>
+				Satisfazer meus clientes é prioridade. Para isso, garanto um processo de desenvolvimento altamente interativo, baseado em feedback contínuo. Não trabalho com escopo fechado: o cliente é que decide quando o produto está pronto.
 
-<h4>Comunidade</h4>
+				Também não trabalho com prazos fechados: qualidade é importante demais para ser sacrificada. </p>
 
-<p>Procuro repassar meu conhecimento para a comunidade. Para isso, já dei diversas palestras e mantenho um blog. </p>
+				<h2>Experiência</h2>
+
+					<p>João domina as tecnologias como ninguém. Eu apresentava um problema, ele tinha na ponta da língua a solução mais adequada com as tecnologias mais recentes.
+					-- Manoel Santos, Petrobrás
+
+				Já desenvolvi projetos para grandes empresas como <a href="www.bmw.com">BMW</a>,<a href="www.uol.com.br">UOL</a> e IBM. Neles, o foco principal era entregar uma experiência imersiva e impactante para o usuário final sem descuidar do desempenho e da acessibilidade da página.
+				Também já fui contratado para transformar grandes portais, como Terra e G1, em páginas responsivas. Fui responsável por renovar o layout, reorganizar o conteúdo e re-escrever o código de forma mais reaproveitável. </p>
+
+				<h2>Comunidade</h2>
+
+				<p>Procuro repassar meu conhecimento para a comunidade. Para isso, já dei diversas palestras e mantenho um blog. </p>
+<img src= "eu.jpg" alt= "">
+<nav>
+	<ul>
+		 <li><a href="#">home</a></li>
+		 <li><a href="#">Portifolio</a></li>
+</body>
+
+<!DOCTYPE html>
+
+</html>
